--- a/src/styles/Theme.scss
+++ b/src/styles/Theme.scss
@@ -2,4 +2,4 @@ $black: black;
 $text-color: rgb(0, 0, 0, 0.5);
 $transparent: rgb(0, 0, 0, 0.15);
 $green: green;
-$orange: orange;
+$orange: #FF4800;
