--- a/src/navigation/Navbar.module.scss
+++ b/src/navigation/Navbar.module.scss
@@ -1,9 +1,28 @@
 @import "../styles/Theme.scss";
 
 .activeLink {
+  position: relative;
   color: $black;
   font-size: 110%;
   font-weight: 600;
+}
+
+.activeLink::before {
+  position: absolute;
+  content: '';
+  top: 100%;
+  left: 50%;
+  width: 5px;
+  height: 5px;
+  background-color: $orange;
+  border-radius: 50%;
+}
+
+.link {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 150%;
+  color: $text-color;
 }
 
 .searchIcon {
@@ -17,12 +36,27 @@
 
 .input {
   padding-left: 2.6em;
-  padding-right: 1.6em;
+  padding-right: 2em;
   border: 1px solid $transparent;
-  box-shadow:1px 1px 2px 0 $transparent, -3px -3px 7px 0 rgb(255, 255, 255, .1);
   border-radius: 6px;
   text-transform: capitalize;
+  transition: all 0.3s ease-in-out;
 }
+.input:focus {
+  box-shadow: 0 0 2px 1px $transparent;
+}
+
+.slashIcon {
+  position: absolute;
+  top: 0.06em;
+  right: 0.25em;
+  background-color: $transparent;
+  font-size: 1.3em;
+  color: $text-color;
+  border-radius: 5px;
+  transform: scale(0.8);
+}
+
 
 .bar {
   height: 40px;
