--- a/src/navigation/Navbar.module.scss
+++ b/src/navigation/Navbar.module.scss
@@ -1,5 +1,9 @@
 @import "../styles/Theme.scss";
 
+.img {
+  width: 150px;
+}
+
 .activeLink {
   position: relative;
   color: $black;
@@ -9,7 +13,7 @@
 
 .activeLink::before {
   position: absolute;
-  content: '';
+  content: "";
   top: 100%;
   left: 50%;
   width: 5px;
@@ -35,10 +39,10 @@
 }
 
 .input {
-  padding-left: 2.6em;
-  padding-right: 2em;
+  padding: 3px 33px 5px 35px;
   border: 1px solid $transparent;
-  border-radius: 6px;
+  border-radius: 4px;
+  font-size: 1rem;
   text-transform: capitalize;
   transition: all 0.3s ease-in-out;
 }
@@ -49,7 +53,7 @@
 .slashIcon {
   position: absolute;
   top: 0.06em;
-  right: 0.25em;
+  right: 0.1em;
   background-color: $transparent;
   font-size: 1.3em;
   color: $text-color;
@@ -57,9 +61,66 @@
   transform: scale(0.8);
 }
 
-
 .bar {
   height: 40px;
   width: 1px;
   background-color: $transparent;
+}
+
+@media (min-width: 1320px) {
+  .activeLink {
+    font-size: 20px;
+  }
+  .link {
+    font-size: 19px !important;
+  }
+  .img {
+    width: 140px !important;
+  }
+  .input {
+    padding: 3px 30px 5px 40px;
+    font-size: 1rem;
+  }
+  .slashIcon {
+    top: 0.06em !important;
+    right: 0.1em !important;
+    transform: scale(0.8) !important;
+  }
+  .searchIcon {
+    top: 22% !important;
+    left: 0.5em !important;
+    transform: scale(0.8) !important;
+  }
+  .icon {
+    font-size: 20px;
+  }
+}
+
+@media (min-width: 1720px) {
+  .activeLink {
+    font-size: 30px;
+  }
+  .link {
+    font-size: 24px !important;
+  }
+  .img {
+    width: 250px !important;
+  }
+  .input {
+    padding: 8px 30px 8px 55px;
+    font-size: 1.2rem;
+  }
+  .slashIcon {
+    top: 0.35em !important;
+    right: 0.3em !important;
+    transform: scale(1) !important;
+  }
+  .searchIcon {
+    top: 30% !important;
+    left: 0.9em !important;
+    transform: scale(1.1) !important;
+  }
+  .icon {
+    font-size: 25px;
+  }
 }
