--- a/src/views/dashboard/index.module.scss
+++ b/src/views/dashboard/index.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles//Theme.scss';
+@import "../../styles//Theme.scss";
 
 .bg {
   position: relative;
@@ -13,19 +13,19 @@
 }
 
 .col:nth-child(1) .bg {
-  background-color: rgb(46, 198, 46, .15);
+  background-color: rgb(46, 198, 46, 0.15);
 }
 .col:nth-child(2) .bg {
-  background-color: rgb(245, 215, 46, .15);
+  background-color: rgb(245, 215, 46, 0.15);
 }
 .col:nth-child(3) .bg {
-  background-color: rgb(46, 196, 218, .15);
+  background-color: rgb(46, 196, 218, 0.15);
 }
 .col:nth-child(4) .bg {
-  background-color: rgb(167, 76, 201, .15);
+  background-color: rgb(167, 76, 201, 0.15);
 }
 .col:nth-child(5) .bg {
-  background-color: rgb(239, 79, 173, .2);
+  background-color: rgb(239, 79, 173, 0.2);
 }
 
 .title {
@@ -42,16 +42,17 @@
 }
 
 .cardBorder {
-  box-shadow:3px 3px 5px 0 $transparent, -3px -3px 5px 0 rgba(255, 254, 254, 0.8);
+  box-shadow: 3px 3px 5px 0 $transparent,
+    -3px -3px 5px 0 rgba(255, 254, 254, 0.8);
   border-radius: 6px;
 }
 
 .badge {
   color: $green;
   background-color: rgb(0, 128, 0, 0.2);
-text-transform: uppercase;
-font-weight: 700;
-font-size: 12px;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 12px;
   border-radius: 6px;
 }
 
@@ -73,10 +74,10 @@ font-size: 12px;
 
 .volume::before {
   position: absolute;
-  content: '';
+  content: "";
   top: 0;
   left: 0;
-    width: 40%;
+  width: 40%;
   height: 6px;
   border-radius: 16px;
 
@@ -105,7 +106,7 @@ font-size: 12px;
   text-transform: capitalize;
   color: $text-color;
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 500;
 }
 
 .img {
@@ -113,4 +114,89 @@ font-size: 12px;
   width: 100%;
   height: 100%;
   border-radius: 3px;
+}
+
+.smallText {
+  font-size: 1rem;
+}
+
+@media (min-width: 1320px) {
+  .bg {
+    position: relative;
+    width: 100%;
+    height: 170px;
+    border-radius: 3px;
+  }
+  .iconSize {
+    height: 55px !important;
+    width: 53px !important;
+  }
+  .iconSize2 {
+    height: 38px !important;
+    width: 55px !important;
+  }
+  .title {
+    margin-top: 10px !important;
+    font-size: 20px !important;
+  }
+  .badge {
+    font-size: 12px !important;
+    padding: 10px 15px !important;
+  }
+  .lightTitle {
+    font-size: 30px !important;
+  }
+  .text {
+    font-size: 16px !important;
+  }
+  .titleTwo {
+    font-size: 1.76rem !important;
+  }
+  b {
+    font-size: 17px !important;
+  }
+  .btn {
+    font-size: 16px !important;
+  }
+}
+@media (min-width: 1720px) {
+  .bg {
+    position: relative;
+    width: 100%;
+    height: 200px;
+    border-radius: 3px;
+  }
+  .iconSize {
+    height: 60px !important;
+    width: 58px !important;
+  }
+  .iconSize2 {
+    height: 40px !important;
+    width: 58px !important;
+  }
+  .title {
+    font-size: 24px !important;
+  }
+  .badge {
+    font-size: 16px !important;
+    padding: 10px 18px !important;
+  }
+  .lightTitle {
+    font-size: 34px !important;
+  }
+  .text {
+    font-size: 21px !important;
+  }
+  .smallText {
+    font-size: 1.3rem;
+  }
+  .titleTwo {
+    font-size: 2.6rem !important;
+  }
+  b {
+    font-size: 20px !important;
+  }
+  .btn {
+    font-size: 20px !important;
+  }
 }
