--- a/src/navigation/Navbar.module.scss
+++ b/src/navigation/Navbar.module.scss
@@ -1,13 +1,17 @@
 @import "../styles/Theme.scss";
+:root {
+  --current-width: 100vw;
+  --ideal-width: 1600;
+}
 
 .img {
-  width: 150px;
+  width: calc(150 * (var(--current-width) / var(--ideal-width)));
 }
 
 .activeLink {
   position: relative;
   color: $black;
-  font-size: 110%;
+  font-size: calc(16 * (var(--current-width) / var(--ideal-width)));
   font-weight: 600;
 }
 
@@ -23,104 +27,54 @@
 }
 
 .link {
-  font-size: 16px;
+  font-size: calc(16 * (var(--current-width) / var(--ideal-width))) !important;
   font-weight: 400;
-  line-height: 150%;
+  line-height: calc(24 * (var(--current-width) / var(--ideal-width)));
   color: $text-color;
+}
+
+.inputContainer {
+  height: calc(39 * (var(--current-width) / var(--ideal-width)));
+  border: 1px solid $transparent;
+  padding-left: calc(30 * (var(--current-width) / var(--ideal-width)));
+  border-radius: 3px;
 }
 
 .searchIcon {
   position: absolute;
-  top: 0.29em;
-  left: 0.5em;
-  font-size: 1.3em;
+  top: calc(9.5 * (var(--current-width) / var(--ideal-width)));
+  left: calc(15 * (var(--current-width) / var(--ideal-width)));
+  height: calc(20 * (var(--current-width) / var(--ideal-width)));
+  font-size: calc(15 * (var(--current-width) / var(--ideal-width)));
   color: $text-color;
-  transform: scale(0.8);
 }
 
 .input {
-  padding: 3px 33px 5px 35px;
-  border: 1px solid $transparent;
-  border-radius: 4px;
-  font-size: 1rem;
+  height: calc(30 * (var(--current-width) / var(--ideal-width)));
+  position: absolute;
+  top: calc(1 * (var(--current-width) / var(--ideal-width)));
+  bottom: 0;
+  padding-left: calc(20 * (var(--current-width) / var(--ideal-width)));
+  border: none;
+  font-size: calc(16 * (var(--current-width) / var(--ideal-width)));
   text-transform: capitalize;
   transition: all 0.3s ease-in-out;
-}
-.input:focus {
-  box-shadow: 0 0 2px 1px $transparent;
 }
 
 .slashIcon {
   position: absolute;
-  top: 0.06em;
-  right: 0.1em;
+  top: calc(3 * (var(--current-width) / var(--ideal-width)));
+  right: calc(5 * (var(--current-width) / var(--ideal-width)));
   background-color: $transparent;
-  font-size: 1.3em;
-  color: $text-color;
-  border-radius: 5px;
-  transform: scale(0.8);
+  height: calc(33 * (var(--current-width) / var(--ideal-width)));
+  border-radius: 3px;
 }
 
 .bar {
-  height: 40px;
+  height: calc(40 * (var(--current-width) / var(--ideal-width)));
   width: 1px;
   background-color: $transparent;
 }
-
-@media (min-width: 1320px) {
-  .activeLink {
-    font-size: 16px;
-  }
-  .link {
-    font-size: 16px !important;
-  }
-  .img {
-    width: 130px !important;
-  }
-  .input {
-    padding: 3px 30px 5px 40px;
-    font-size: 1rem;
-  }
-  .slashIcon {
-    top: 0.06em !important;
-    right: 0.1em !important;
-    transform: scale(0.8) !important;
-  }
-  .searchIcon {
-    top: 22% !important;
-    left: 0.5em !important;
-    transform: scale(0.8) !important;
-  }
-  .icon {
-    font-size: 18px;
-  }
-}
-
-@media (min-width: 1720px) {
-  .activeLink {
-    font-size: 20px;
-  }
-  .link {
-    font-size: 20px !important;
-  }
-  .img {
-    width: 150px !important;
-  }
-  .input {
-    padding: 8px 30px 8px 55px;
-    font-size: 1.2rem;
-  }
-  .slashIcon {
-    top: 0.35em !important;
-    right: 0.3em !important;
-    transform: scale(1) !important;
-  }
-  .searchIcon {
-    top: 30% !important;
-    left: 0.9em !important;
-    transform: scale(1.1) !important;
-  }
-  .icon {
-    font-size: 23px;
-  }
+.icon {
+  font-size: calc(18 * (var(--current-width) / var(--ideal-width)));
 }
