--- a/src/client/styles/theme.scss
+++ b/src/client/styles/theme.scss
@@ -3,9 +3,9 @@ $poppins: "Poppins";
 $inter: "Inter";
 $white: #ffffff;
 $semiWhite: rgb(255, 255, 255, 0.8);
-$darkGreen: #1d555c;
+$darkGreen: #06121e;
 $lightGreen: #36dfae;
 
 @function scaleXL($value, $ideal: 1920, $current: 100vw) {
-  @return calc(#{$value} * (#{$current} / #{$ideal}));
+	@return calc(#{$value} * (#{$current} / #{$ideal}));
 }
