--- a/src/clientApp/styles/theme.scss
+++ b/src/clientApp/styles/theme.scss
@@ -14,7 +14,7 @@ $transparent: #51f1b81a;
 
 @font-face {
   font-family: "Be Vietnam Pro";
-  src: url("../../../public/fonts/BeVietnamPro-Black.woff");
+  src: url("../../../public/fonts/BeVietnamPro-Regular.ttf");
 }
 
 $viet: "Be Vietnam Pro";
