--- a/src/clientApp/sharedLayout/index.module.scss
+++ b/src/clientApp/sharedLayout/index.module.scss
@@ -115,3 +115,78 @@
     border-bottom: 1px dashed $white;
   }
 }
+
+.bar {
+  display: none;
+}
+.barIcon {
+  display: none;
+}
+
+@media (max-width: 500px) {
+  .barIcon {
+    display: flex;
+  }
+  .bar {
+    display: block;
+    position: relative;
+    padding: 0 10px 3px 10px;
+    cursor: pointer;
+    color: $white;
+    font-size: 22px;
+    border: 2px solid $white;
+    border-radius: 10px;
+  }
+  .d_none {
+    display: none;
+  }
+  .urls {
+    position: absolute;
+    top: 120%;
+    right: 0;
+    background-color: $white;
+    flex-direction: column;
+    color: $deamBlue;
+    width: 150px;
+    height: 130px;
+    border-radius: 10px;
+    gap: 0px;
+    align-items: start;
+    padding: 8px 0;
+    transition: all 0.2s ease-in-out;
+    visibility: hidden;
+    z-index: -1;
+    overflow: hidden;
+    opacity: 0;
+  }
+  .urls.show {
+    visibility: visible !important;
+    z-index: 1 !important;
+    width: 200px !important;
+    height: 180px !important;
+    opacity: 1 !important;
+  }
+
+  .url {
+    gap: #{scaleXL(16)};
+    padding: 10px 20px;
+    @include text600();
+    font-size: #{scaleXL(20)};
+    color: $deamBlue !important;
+    width: 100%;
+    transition: all 0.2s ease-in-out;
+
+    img {
+      height: #{scaleXL(28)};
+      width: #{scaleXL(27)};
+    }
+
+    &:hover {
+      background: rgb(0, 0, 0, 0.05);
+    }
+  }
+
+  .footer {
+    flex-direction: column;
+  }
+}
